# demo_ollama_function_calling

./: README.md  pyproject.toml
data/: sales_data.csv  weather_data.csv
function_calling/: main.py
