[tool.poetry]
name = "function-calling"
version = "0.1.0"
description = ""
authors = ["Guillermo Martín-Coello <guillermo.martin@adiapack.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.4.1"
requests = "^2.32.3"
seaborn = "^0.13.2"
pandas = "^2.2.3"
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
